--- a/pres.Rmd
+++ b/pres.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Datenanalyse in R mit data.table"
 author: "Tim Graf"
-date: "28 September 2016"
+date: "06. Oktober 2016"
 output: 
     ioslides_presentation:
         widescreen: true
